--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
                 <div class="hidden md:flex space-x-8">
                     <a href="#ueber-uns" class="nav-link">Über uns</a>
                     <a href="#heim" class="nav-link">Pfadfinderheim</a>
-                    <a href="#fahrten" class="nav-link">Fahrten</a>
-                    <a href="#musisches" class="nav-link">Musisches</a>
+                    <a href="#foerderverein" class="nav-link">Förderverein</a>
                     <a href="#kontakt" class="nav-link">Kontakt</a>
                 </div>
             </div>
@@ -38,6 +37,23 @@
         </div>
     </header>
 
+    <!-- Pfadfinderheim Section -->
+    <section id="heim" class="py-20 bg-gray-100">
+        <div class="container mx-auto px-4">
+            <h2 class="text-4xl font-bold text-center mb-12">Pfadfinderheim</h2>
+            <div class="max-w-3xl mx-auto bg-white p-8 rounded-lg shadow-lg">
+                <h3 class="text-2xl font-bold mb-6">Ausstattung</h3>
+                <p class="text-gray-600 mb-4">Im renovierten Haupthaus befinden sich die Küche, zwei Schlafzimmer, ein großer Wohnraum mit einem großen Tisch, das Bad mit Dusche, Waschbecken und einer Toilette. Draußen findet Ihr eine Hütte mit Sitzgelegenheiten und Kühlschränken, sowie ein Vordach mit weiterer Nutzfläche. Eine große Feuerstelle, eine Außentoilette und viel Platz für Zelte bieten Euch optimale Bedingungen für Euren Aufenthalt im Freien.</p>
+                <h3 class="text-xl font-bold mb-2">Freizeit</h3>
+                <p class="text-gray-600 mb-4">Grillplatz, Lagerfeuer, Bolzplatz, Klettermöglichkeit, eigener Wald</p>
+                <h3 class="text-xl font-bold mb-2">Bemerkungen</h3>
+                <p class="text-gray-600 mb-4">Es sind keine Partys erlaubt.<br>Müll und Flaschen müssen selber wieder mitgenommen werden.<br>Für die Betten sind Schlafsäcke nötig.</p>
+                <h3 class="text-xl font-bold mb-2">Zusätzliche Angaben</h3>
+                <p class="text-gray-600 mb-4">Nur 10 km südwestlich der Kölner Innenstadt liegt der alte Tierpark.</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Über uns Section -->
     <section id="ueber-uns" class="py-20">
         <div class="container mx-auto px-4">
@@ -45,7 +61,7 @@
             <div class="grid md:grid-cols-2 gap-12">
                 <div class="bg-white p-8 rounded-lg shadow-lg">
                     <h3 class="text-2xl font-bold mb-4">Stamm Saporoger</h3>
-                    <p class="text-gray-600">Wir sind eine aktive Pfadfindergruppe in Hürth, die sich der Jugendarbeit verschrieben hat. Bei uns lernen Kinder und Jugendliche die Natur zu schätzen und in der Gemeinschaft zu wachsen.</p>
+                    <p class="text-gray-600">Wir sind eine aktive Pfadfindergruppe in Hürth, die sich der Jugendarbeit verschrieben hat. Bei uns lernen Kinder und Jugendliche ab 8 Jahren die Natur zu schätzen und in der Gemeinschaft zu wachsen.</p>
                 </div>
                 <div class="bg-white p-8 rounded-lg shadow-lg">
                     <h3 class="text-2xl font-bold mb-4">Hag Theophanu</h3>
@@ -54,6 +70,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- Heimabende Section -->
     <section id="heim" class="py-20 bg-gray-100">
@@ -75,28 +92,38 @@
         </div>
     </section>
 
+    <!-- Förderverein Section -->
+    <section id="foerderverein" class="py-20">
+        <div class="container mx-auto px-4">
+            <h2 class="text-4xl font-bold text-center mb-12">Förderverein</h2>
+            <div class="max-w-3xl mx-auto bg-white p-8 rounded-lg shadow-lg">
+                <p class="text-gray-600 mb-4">
+                    Der Förderverein wurde gegründet, um unser Gelände zu pachten, zu verwalten und den Stamm zu unterstützen, damit die aktiven, jüngeren Pfadfinder sich ganz und gar auf pfadfinderische Themen konzentrieren können. Er setzt sich aus engagierten Eltern, älteren Pfadfindern und der Stammesführung zusammen.
+                </p>
+                <p class="text-gray-600 mb-4">
+                    Durch Arbeitseinsätze der Pfadfinder, Spenden, Mieteinnahmen und Mitgliedsbeiträge finanziert sich das Gelände.<br>
+                    Wenn Du von der Idee des Geländes angetan bist und es finanziell oder tatkräftig unterstützen willst, so kontaktier uns doch einfach mal!
+                </p>
+                <div class="bg-gray-100 rounded-lg p-4 mb-4">
+                    <h3 class="text-xl font-bold mb-2">Kontoverbindung</h3>
+                    <p class="text-gray-600">Kontoinhaber: Förderverein Stamm Saporoger Hürth e.V.<br>
+                    IBAN: DE22370502990119001945<br>
+                    BIC: COKSDE33XXX<br>
+                    Spendenquittung auf Anfrage</p>
+                </div>
+                <p class="text-gray-500 text-sm">Weitere Informationen und Formulare findest du auf der <a href="https://saporoger.de/pfadfinderheim/foerderverein/" class="text-green-800 underline hover:text-green-600" target="_blank">offiziellen Website</a>.</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Kontakt Section -->
     <section id="kontakt" class="py-20">
         <div class="container mx-auto px-4">
             <h2 class="text-4xl font-bold text-center mb-12">Kontakt</h2>
-            <div class="max-w-3xl mx-auto bg-white p-8 rounded-lg shadow-lg">
-                <div class="grid md:grid-cols-2 gap-8">
-                    <div>
-                        <h3 class="text-xl font-bold mb-4">Jungs</h3>
-                        <p class="text-gray-600">Email: zimmerjens95@gmail.com</p>
-                    </div>
-                    <div>
-                        <h3 class="text-xl font-bold mb-4">Mädels</h3>
-                        <p class="text-gray-600">Email: hag-theophanu@gmx.de</p>
-                    </div>
-                </div>
-                <div class="mt-8 text-center">
-                    <p class="text-gray-600">Folge uns auf Social Media:</p>
-                    <div class="flex justify-center space-x-4 mt-4">
-                        <a href="#" class="text-green-800 hover:text-green-600">Facebook</a>
-                        <a href="#" class="text-green-800 hover:text-green-600">Instagram</a>
-                    </div>
-                </div>
+            <div class="max-w-3xl mx-auto bg-white p-8 rounded-lg shadow-lg text-center">
+                <a href="mailto:kontakt@saporoger.de" class="inline-block bg-green-800 text-white px-8 py-3 rounded-full font-bold hover:bg-green-700 transition duration-300">
+                    Kontaktieren Sie uns
+                </a>
             </div>
         </div>
     </section>
