--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="flex items-center">
                     <a href="#" class="text-xl font-bold text-white flex items-center space-x-2">
                         <!-- Wappen werden hier eingefügt -->
-                        <img src="wappen1.png" alt="Wappen 1" class="h-8 w-8 inline-block mr-2" />
+                        <img src="haag.png" alt="Wappen 1" class="h-8 w-8 inline-block mr-2" />
                         <img src="wappen2.png" alt="Wappen 2" class="h-8 w-8 inline-block mr-2" />
                         Stamm Saporoger & Hag Theophanu
                     </a>
