--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stamm Saporoger & Hag Theophanu - Pfadfinder in Hürth</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.0/dist/tailwind.min.css" rel="stylesheet">
+    <script src="tailwind.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-gray-50">
@@ -178,6 +178,11 @@
                 Grüngürtel Str. 10<br>
                 50996 Köln</p>
                 <p><strong>E-Mail:</strong> <a href="mailto:kontakt@saporoger.de" class="text-blue-800 underline">kontakt@saporoger.de</a></p>
+                <p class="mt-4 pt-4 border-t border-gray-200">
+                    <strong>Technische Hinweise:</strong><br>
+                    Diese Website verwendet Tailwind CSS, ein Open-Source-Framework für das Styling. Vielen Dank an das Tailwind CSS Team für ihre hervorragende Arbeit!<br>
+                    Tailwind CSS wird unter der <a href="https://github.com/tailwindlabs/tailwindcss/blob/master/LICENSE" class="text-blue-800 underline" target="_blank">MIT-Lizenz</a> veröffentlicht.
+                </p>
             </div>
         </div>
     </div>
