ueber uns improved

--- a/index.html
+++ b/index.html
@@ -59,17 +59,92 @@
     </header>
 
     <!-- Über uns Section -->
-    <section id="ueber-uns" class="py-12 md:py-20">
+    <section id="ueber-uns" class="py-16 bg-white">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12">Über uns</h2>
-            <div class="grid md:grid-cols-2 gap-6 md:gap-12">
-                <div class="bg-white p-6 md:p-8 rounded-lg shadow-lg">
-                    <h3 class="text-xl md:text-2xl font-bold mb-4">Stamm Saporoger</h3>
-                    <p class="text-gray-600">Wir sind eine aktive Pfadfindergruppe in Hürth, die sich der Jugendarbeit verschrieben hat. Bei uns lernen Kinder und Jugendliche ab 8 Jahren die Natur zu schätzen und in der Gemeinschaft zu wachsen.</p>
+            <h2 class="text-3xl font-bold text-center mb-12">Über uns</h2>
+            <div class="grid md:grid-cols-2 gap-8 mb-16">
+                <div class="bg-gray-50 p-6 rounded-lg">
+                    <h3 class="text-2xl font-semibold mb-4 text-blue-800">Stamm Saporoger</h3>
+                    <p class="text-gray-600 mb-4">
+                        In der Stadt Hürth gibt es Pfadfinder nun schon seit 26 Jahren und es werden immer mehr. Mittlerweile sind wir über 30 Jungen, die oft gemeinsam auf Fahrt gehen. Ohne Eltern versteht sich. Ohne unnötige Technik, ganz real.
+                    </p>
+                    <p class="text-gray-600 mb-4">
+                        Unsere Großfahrten führten uns bereits von Rumänien, über Österreich, Spanien, Frankreich, Italien, Slowenien, Ungarn, Irland, Schottland, Wales, Israel bis runter in die ferne Mongolei. Aber auch quer durch deutsche Lande sind wir gereist und immer kamen alle wieder gesund und müde im schönen Hürth an.
+                    </p>
+                    <p class="text-gray-600 mb-4">
+                        Wöchentlich finden zudem Gruppenstunden in kleinen Horten von 5-7 Jungs statt. Basteln, Spielen, Singen, Toben und natürlich das Erlernen einfacher Pfadfindertechniken, wie Zeltbau, Feuer zu machen und Knoten zu binden, gehören hier zum Programm.
+                    </p>
+                    <p class="text-gray-600">
+                        Als Stamm, also mit allen Horten und Älteren zusammen, helfen wir im Naturschutz und bei sozialen Projekten, werkeln an unserem Haus oder bauen auch mal ein Floß. Nach §75 des KjHG sind wir als förderungswürdig anerkannt und außerdem Mitglied im Jugendring der Stadt Hürth. Wir gehören dem Deutschen Pfadfinderbund an, einem parteipolitisch völlig neutralen und interkonfessionellen Jugendbund.
+                    </p>
                 </div>
-                <div class="bg-white p-6 md:p-8 rounded-lg shadow-lg">
-                    <h3 class="text-xl md:text-2xl font-bold mb-4">Hag Theophanu</h3>
-                    <p class="text-gray-600">Unsere Mädchengruppe bietet ein besonderes Programm für Mädchen ab 7 Jahren. Hier können sie spielerisch die Natur erkunden und ihre Kreativität entfalten.</p>
+                <div class="bg-gray-50 p-6 rounded-lg">
+                    <h3 class="text-2xl font-semibold mb-4 text-blue-800">Hag Theophanu</h3>
+                    <p class="text-gray-600 mb-4">
+                        Seit Herbst 2017 gibt es wieder eine Mädchengruppe am Heim. Wir treffen uns immer Dienstags von 17.00 bis 19.00 Uhr zum Spielen, werken, toben, singen und "Pfadfinder-Sachen" machen.
+                    </p>
+                    <p class="text-gray-600 mb-6">
+                        Warum Theophanu? Theophanu war eine mächtige und kluge Frau. Sie lebte im Mittelalter und war sogar Kaiserin. Ursprünglich kam sie aus Byzanz (Heute: Istanbul) und wurde in Köln begraben. Sie hat sich ihr ganzes Leben lang für die Verständigung zwischen Orient und Okzident stark gemacht. Ein gutes Vorbild, finden wir!
+                    </p>
+                    
+                    <h4 class="text-xl font-semibold mb-4 text-blue-800">Unsere Gilden</h4>
+                    <div class="space-y-4">
+                        <div class="bg-white p-4 rounded-lg">
+                            <h5 class="text-lg font-semibold mb-2">Gilde Mucki</h5>
+                            <p class="mb-2">
+                                Die Gilde Mucki besteht zurzeit aus 7 Mädchen zwischen 7 und 12 Jahren. Sie ist Teil des Hags Theophanu.
+                            </p>
+                            <p class="italic text-gray-600">
+                                "Wir haben uns wegen Mucki Koch so genannt. Sie war im Krieg bei den Edelweißpiraten in Köln. Das war so ähnlich wie Pfadfinder. Die Edelweißpiraten waren gegen Hitler und gegen die Nazis. Mucki war ganz schön mutig und musste sogar ins Gefängnis."
+                            </p>
+                        </div>
+                        <div class="bg-white p-4 rounded-lg">
+                            <h5 class="text-lg font-semibold mb-2">Gilde Agrippina</h5>
+                            <p class="mb-2">
+                                Die Gilde Agrippina besteht zurzeit aus 8 Mädchen zwischen 8 und 14 Jahren. Sie ist ein Teil des Hags Theophanu.
+                            </p>
+                            <p class="italic text-gray-600">
+                                "Wir heißen Agrippina, weil das auch eine ganz mächtige Frau war. So wie Theophanu. Aber sie hat vor 2000 Jahren gelebt und hat Köln gegründet."
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="max-w-3xl mx-auto">
+                <div class="bg-gray-50 p-6 rounded-lg mb-8">
+                    <h3 class="text-2xl font-semibold mb-4 text-blue-800">Unsere Heimabende</h3>
+                    <p class="text-gray-600 mb-4">
+                        Jeden Dienstag treffen wir uns in unserem Pfadfinderheim in Hürth-Hermülheim. Die Gruppenstunden finden in der Regel von 17:30 bis 19:30 Uhr statt. Hier lernen die Kinder und Jugendlichen spielerisch die Grundlagen des Pfadfinderlebens kennen.
+                    </p>
+                    <div class="grid md:grid-cols-2 gap-4">
+                        <div>
+                            <h4 class="text-lg font-semibold mb-2">Stamm Saporoger</h4>
+                            <p class="text-gray-600">Dienstags, 17:30 - 19:30 Uhr</p>
+                        </div>
+                        <div>
+                            <h4 class="text-lg font-semibold mb-2">Hag Theophanu</h4>
+                            <p class="text-gray-600">Dienstags, 17:00 - 19:00 Uhr</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="bg-blue-50 p-6 rounded-lg">
+                    <h3 class="text-xl font-semibold mb-4">So kannst du bei uns mitmachen:</h3>
+                    <ul class="list-disc list-inside space-y-2">
+                        <li>Du hast Lust auf Abenteuer?</li>
+                        <li>Du bist gerne draußen?</li>
+                        <li>Du bist zwischen 6 und 16 Jahre alt?</li>
+                        <li>Du bist gerne mit anderen zusammen?</li>
+                        <li>Du magst spielen, singen, Feuer machen, werken und noch viel mehr?</li>
+                        <li>Du suchst ein Hobby, was dich dein ganzes Leben lang begleitet?</li>
+                    </ul>
+                    <p class="mt-4">
+                        Wenn du Lust darauf hast, komm einfach beim nächsten Heimabend vorbei. Oder schreib uns. Einstieg jederzeit möglich!
+                    </p>
+                    <a href="mailto:hag-theophanu@gmx.de" class="inline-block mt-4 text-blue-800 hover:text-blue-600">
+                        hag-theophanu@gmx.de
+                    </a>
                 </div>
             </div>
         </div>
@@ -88,37 +163,6 @@
                 <p class="text-gray-600 mb-4">Es sind keine Partys erlaubt.<br>Müll und Flaschen müssen selber wieder mitgenommen werden.<br>Für die Betten sind Schlafsäcke nötig.</p>
                 <h3 class="text-lg md:text-xl font-bold mb-2">Zusätzliche Angaben</h3>
                 <p class="text-gray-600 mb-4">Nur 10 km südwestlich der Kölner Innenstadt liegt der alte Tierpark.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Heimabende Section -->
-    <section id="heimabende" class="py-12 md:py-20 bg-gray-100">
-        <div class="container mx-auto px-4">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12">Unsere Heimabende</h2>
-            <div class="max-w-3xl mx-auto mb-8">
-                <div class="bg-blue-100 p-4 md:p-6 rounded-lg shadow text-gray-700 text-base">
-                    <p class="mb-1">Du hast Lust auf Abenteuer?</p>
-                    <p class="mb-1">Du bist gerne draußen?</p>
-                    <p class="mb-1">Du bist zwischen 6 und 16 Jahre alt?</p>
-                    <p class="mb-1">Du bist gerne mit anderen zusammen?</p>
-                    <p class="mb-1">Du magst spielen, singen, Feuer machen, werken und noch viel mehr?</p>
-                    <p class="mb-1">Du suchst ein Hobby, was dich dein ganzes Leben lang begleitet?</p>
-                    <p class="mt-2">Wenn du Lust darauf hast, komm einfach beim nächsten Heimabend (Dienstags von 17 bis 19.00 Uhr) vorbei. Oder schreib uns. Einstieg jederzeit möglich!</p>
-                </div>
-            </div>
-            <div class="max-w-3xl mx-auto bg-white p-6 md:p-8 rounded-lg shadow-lg">
-                <p class="text-lg mb-6">Treffpunkt: Pfadfinderzentrum, Luxemburgerstraße 519</p>
-                <div class="grid md:grid-cols-2 gap-6 md:gap-8">
-                    <div>
-                        <h3 class="text-lg md:text-xl font-bold mb-4">Jungs</h3>
-                        <p class="text-gray-600">Dienstag: 17:00 - 18:30 Uhr</p>
-                    </div>
-                    <div>
-                        <h3 class="text-lg md:text-xl font-bold mb-4">Mädels</h3>
-                        <p class="text-gray-600">Dienstag: 17:00 - 18:30 Uhr</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
