ki notes. wappen. kleine korrekturen

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stamm Saporoger & Hag Theophanu - Pfadfinder in Hürth</title>
+    <meta name="keywords" content="Pfadfinder, Hürth, Stamm, Saporoger, DPB, DPSG, Jugendgruppe, Voll Joot, Fahrten, Abenteuer" />
+	<meta name="description" content="Die Saporoger in Hürth sind eine Jungen-Gruppe des Deutschen Pfadfinder Bundes. Die Pfadfindergruppe Haag Theophanu in Hürth ist eine Mädchen-Gruppe im DPB. Wir gehen gemeinsam auf Fahrten um Abenteuer und die Natur zu erleben." />
+	<meta name="robots" content="INDEX,FOLLOW,NOODP" />
+	<meta name="language" content="de" />
     <script src="tailwind.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,9 +18,9 @@
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
                     <a href="#" class="text-xl font-bold text-white flex items-center space-x-2">
-                        <img src="haag.png" alt="Wappen 1" class="h-10 w-auto" loading="lazy" />
-                        <img src="wappen2.png" alt="Wappen 2" class="h-10 w-auto" loading="lazy" />
+                        <img src="saporoger.png" alt="Wappen Stamm Saporoger" class="h-10 w-auto" loading="lazy" />
                         <span class="hidden sm:inline">Stamm Saporoger & Hag Theophanu</span>
+                        <img src="theophanu.png" alt="Wappen Haag Theophanu" class="h-10 w-auto" loading="lazy" />
                         <span class="sm:hidden">Pfadfinder Hürth</span>
                     </a>
                 </div>
@@ -66,7 +70,7 @@
                 <div class="bg-gray-50 p-6 rounded-lg">
                     <h3 class="text-2xl font-semibold mb-4 text-blue-800">Stamm Saporoger</h3>
                     <p class="text-gray-600 mb-4">
-                        In der Stadt Hürth gibt es Pfadfinder nun schon seit 26 Jahren und es werden immer mehr. Mittlerweile sind wir über 30 Jungen, die oft gemeinsam auf Fahrt gehen. Ohne Eltern versteht sich. Ohne unnötige Technik, ganz real.
+                        In der Stadt Hürth gibt es Pfadfinder nun schon seit über 30 Jahren. Mittlerweile sind wir an die 40 Jungen, die oft gemeinsam auf Fahrt gehen. Ohne Eltern versteht sich. Ohne unnötige Technik, ganz real.
                     </p>
                     <p class="text-gray-600 mb-4">
                         Unsere Großfahrten führten uns bereits von Rumänien, über Österreich, Spanien, Frankreich, Italien, Slowenien, Ungarn, Irland, Schottland, Wales, Israel bis runter in die ferne Mongolei. Aber auch quer durch deutsche Lande sind wir gereist und immer kamen alle wieder gesund und müde im schönen Hürth an.
